--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <img src="img/totop.svg" alt="">
   </div>
 </div>
-<script src="js/swiper.js"></script>
-<script src="js/script.js"></script>
+<script src="https://fumiyaisozaki.github.io/portfolio/js/swiper.js"></script>
+<script src="https://fumiyaisozaki.github.io/portfolio/js/script.js"></script>
 </body>
 </html>
